tests/fixtures/errors/reserved_member_public.z
# reserved_member_public.z -- a class field named `public` is rejected
# (E0037); only the `public: unit { ... }` visibility form is allowed.

box: class {
    public: 0
}

main: function is {
    print "unreachable"
}
